@@ -1,3 +1,9 @@
+2016-07-25  Jason Merrill  <jason@redhat.com>
+
+	PR c++/71833
+	* pt.c (coerce_template_parameter_pack): Fix logic for
+	pack index.
+
 2016-07-21  Jason Merrill  <jason@redhat.com>
 
 	PR c++/69223
